[gd_scene load_steps=21 format=2]

[ext_resource path="res://object/RegularView/RegularView.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Process.gd" type="Script" id=2]
[ext_resource path="res://object/InfoPanel/InfoPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://object/camera/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://scene/ui/FileDialog.gd" type="Script" id=5]
[ext_resource path="res://scene/ui/info.gd" type="Script" id=6]
[ext_resource path="res://scene/ui/TitleBar/TitleBar.gd" type="Script" id=7]
[ext_resource path="res://scene/Main.gd" type="Script" id=8]
[ext_resource path="res://scene/ui/GuildText.gd" type="Script" id=9]
[ext_resource path="res://scene/ui/UI.gd" type="Script" id=10]
[ext_resource path="res://object/ImageView/ImageView.gd" type="Script" id=11]
[ext_resource path="res://scene/ui/TitleBar/RecentMenu.gd" type="Script" id=12]
[ext_resource path="res://object/ColorPicker/ColorPicker.tscn" type="PackedScene" id=13]
[ext_resource path="res://scene/ui/TitleBar/OpenFolder.gd" type="Script" id=14]
[ext_resource path="res://scene/scroll.gd" type="Script" id=15]
[ext_resource path="res://scene/Navigate.gd" type="Script" id=16]
[ext_resource path="res://object/camera/movement.gd" type="Script" id=17]
[ext_resource path="res://object/camera/mouse.gd" type="Script" id=19]
[ext_resource path="res://object/camera/zoom.gd" type="Script" id=21]
[ext_resource path="res://object/camera/reset.gd" type="Script" id=22]

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 10 )

[node name="info" type="Control" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -223.0
margin_right = 240.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/info"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.886275, 0.886275, 0.886275, 0.27451 )

[node name="MarginContainer" type="MarginContainer" parent="UI/info"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 15.0
margin_right = -15.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/info/MarginContainer"]
margin_right = 210.0
margin_bottom = 193.0

[node name="TitleBar" type="Control" parent="UI"]
anchor_right = 1.0
margin_bottom = 18.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="UI/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
mouse_filter = 1
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/TitleBar"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.13, 0.13, 0.1196, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/TitleBar/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="left" type="HBoxContainer" parent="UI/TitleBar/ColorRect/HBoxContainer"]
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Color" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/left"]
margin_right = 45.0
margin_bottom = 20.0
text = "Color"
flat = true

[node name="Info" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/left"]
margin_left = 49.0
margin_right = 86.0
margin_bottom = 20.0
text = "Info"
flat = true

[node name="center" type="HBoxContainer" parent="UI/TitleBar/ColorRect/HBoxContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="RecentMenu" type="MenuButton" parent="UI/TitleBar/ColorRect/HBoxContainer/center"]
margin_right = 300.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 9.0
text = "choise some folder"
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="UI/TitleBar/ColorRect/HBoxContainer/center/RecentMenu"]

[node name="OpenFolder" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/center"]
margin_left = 304.0
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "O"
script = ExtResource( 14 )

[node name="right" type="HBoxContainer" parent="UI/TitleBar/ColorRect/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
alignment = 2

[node name="minimize" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/right"]
margin_left = 259.0
margin_right = 277.0
margin_bottom = 20.0
text = "_"
flat = true

[node name="maximize" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/right"]
margin_left = 281.0
margin_right = 316.0
margin_bottom = 20.0
text = "Full"
flat = true

[node name="quit" type="Button" parent="UI/TitleBar/ColorRect/HBoxContainer/right"]
margin_left = 320.0
margin_right = 340.0
margin_bottom = 20.0
text = "X"
flat = true

[node name="GuildText" type="Label" parent="UI"]
margin_left = 7.94473
margin_top = 45.8555
margin_right = 234.945
margin_bottom = 59.8555
text = "choise image folder
 -press 'TAB' and
 -click '+' up left  "
valign = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="UI/GuildText"]
one_shot = true
autostart = true

[node name="PopMenu" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="UI/PopMenu"]
visible = true
margin_left = 634.434
margin_top = 671.501
margin_right = 1058.43
margin_bottom = 1095.5
size_flags_horizontal = 3
window_title = "Open a Directory"
mode = 2
access = 2
current_dir = "c:/"
current_path = "c:/"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" parent="UI/PopMenu" instance=ExtResource( 13 )]
margin_left = 14.5742
margin_top = 639.982
margin_right = 584.574
margin_bottom = 1109.98

[node name="InfoPanel" parent="UI/PopMenu" instance=ExtResource( 3 )]
margin_left = 1107.71
margin_top = 654.559
margin_right = 1047.71
margin_bottom = 582.559

[node name="RegularView" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 1 )

[node name="ImagePlace" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="Process" type="Node" parent="ImagePlace"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="ImagePlace"]
position = Vector2( 510.807, 299.326 )
current = true
script = ExtResource( 4 )

[node name="movement" type="Node" parent="ImagePlace/Camera2D"]
script = ExtResource( 17 )

[node name="zoom" type="Node" parent="ImagePlace/Camera2D"]
script = ExtResource( 21 )

[node name="reset" type="Node" parent="ImagePlace/Camera2D"]
script = ExtResource( 22 )

[node name="mouse" type="Node" parent="ImagePlace/Camera2D"]
script = ExtResource( 19 )

[node name="CanvasLayer" type="CanvasLayer" parent="ImagePlace"]

[node name="scroll" type="Control" parent="ImagePlace/CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = 20.0
margin_bottom = -1.0
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ImagePlace/CanvasLayer/scroll"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 1, 1, 1, 0.054902 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="select" type="ColorRect" parent="ImagePlace/CanvasLayer/scroll"]
margin_right = 36.0
margin_bottom = 40.0
color = Color( 0.760784, 0.760784, 0.760784, 0.262745 )

[node name="Navigate" type="VBoxContainer" parent="ImagePlace/CanvasLayer"]
anchor_bottom = 1.0
margin_top = 20.0
margin_right = 42.0
margin_bottom = -3.0
alignment = 1
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First" type="Button" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 215.0
margin_right = 42.0
margin_bottom = 235.0
text = "First"

[node name="Prev" type="Button" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 239.0
margin_right = 42.0
margin_bottom = 259.0
text = "Prev"

[node name="Current" type="Label" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 263.0
margin_right = 42.0
margin_bottom = 277.0
text = "0"
align = 1

[node name="Label" type="Label" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 281.0
margin_right = 42.0
margin_bottom = 295.0
text = "---"
align = 1

[node name="All" type="Label" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 299.0
margin_right = 42.0
margin_bottom = 313.0
text = "0"
align = 1

[node name="Next" type="Button" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 317.0
margin_right = 42.0
margin_bottom = 337.0
text = "Next"

[node name="End" type="Button" parent="ImagePlace/CanvasLayer/Navigate"]
margin_top = 341.0
margin_right = 42.0
margin_bottom = 361.0
text = "End"
[connection signal="gui_input" from="UI/TitleBar" to="UI/TitleBar" method="_on_TitleBar_gui_input"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/left/Color" to="UI" method="open_options"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/left/Info" to="UI" method="open_info"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/center/OpenFolder" to="UI/TitleBar/ColorRect/HBoxContainer/center/OpenFolder" method="_on_OpenFolder_pressed"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/right/minimize" to="UI/TitleBar" method="_on_minimaiz_pressed"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/right/maximize" to="UI/TitleBar" method="_on_maximize_pressed"]
[connection signal="pressed" from="UI/TitleBar/ColorRect/HBoxContainer/right/quit" to="UI/TitleBar" method="_on_quit_pressed"]
[connection signal="timeout" from="UI/GuildText/Timer" to="UI/GuildText" method="_on_Timer_timeout"]
[connection signal="dir_selected" from="UI/PopMenu/FileDialog" to="UI/PopMenu/FileDialog" method="_on_FileDialog_dir_selected"]
[connection signal="mouse_entered" from="ImagePlace/CanvasLayer/scroll" to="ImagePlace/CanvasLayer/scroll" method="_on_scroll_mouse_entered"]
[connection signal="mouse_exited" from="ImagePlace/CanvasLayer/scroll" to="ImagePlace/CanvasLayer/scroll" method="_on_scroll_mouse_exited"]
[connection signal="pressed" from="ImagePlace/CanvasLayer/Navigate/First" to="ImagePlace/CanvasLayer/Navigate" method="_on_First_pressed"]
[connection signal="pressed" from="ImagePlace/CanvasLayer/Navigate/Prev" to="ImagePlace/CanvasLayer/Navigate" method="_on_Prev_pressed"]
[connection signal="pressed" from="ImagePlace/CanvasLayer/Navigate/Next" to="ImagePlace/CanvasLayer/Navigate" method="_on_Next_pressed"]
[connection signal="pressed" from="ImagePlace/CanvasLayer/Navigate/End" to="ImagePlace/CanvasLayer/Navigate" method="_on_End_pressed"]
